--- a/kustomization/components/frigate/statefulset.yml
+++ b/kustomization/components/frigate/statefulset.yml
@@ -68,6 +68,7 @@ spec:
               mountPath: /dev/shm
             - name: frigate-tmp
               mountPath: /tmp/cache
+      priorityClassName: critical-application
       volumes:
         - configMap:
             name: frigate-configmap
