--- a/kustomization/components/prometheus/prometheus.yml
+++ b/kustomization/components/prometheus/prometheus.yml
@@ -4,6 +4,7 @@ kind: Prometheus
 metadata:
   name: prometheus
 spec:
+  priorityClassName: application
   ruleSelector: {}
   securityContext:
     fsGroup: 65536
