--- a/kustomization/components/unifi-network-application/statefulset.yml
+++ b/kustomization/components/unifi-network-application/statefulset.yml
@@ -145,6 +145,7 @@ spec:
               name: init-mongodb
             - mountPath: /scripts
               name: mongodb-scripts
+      priorityClassName: critical-application
       volumes:
         - emptyDir:
             medium: Memory
