--- a/kustomization/overlays/prod/traefik/redissentinel.yml
+++ b/kustomization/overlays/prod/traefik/redissentinel.yml
@@ -18,6 +18,7 @@ spec:
   podSecurityContext:
     fsGroup: 1000 # redis
     runAsUser: 1000 # redis
+  priorityClassName: system-cluster-critical
   redisSentinelConfig: 
     redisReplicationName : authelia-redis-replication
   kubernetesConfig:
