--- a/kustomization/components/jellyfin/statefulset.yml
+++ b/kustomization/components/jellyfin/statefulset.yml
@@ -42,6 +42,7 @@ spec:
               name: jellyfin-config
             - mountPath: /cache
               name: jellyfin-cache
+      priorityClassName: application
   volumeClaimTemplates:
     - metadata:
         name: jellyfin-cache
