--- a/kustomization/components/longhorn/kustomization.yml
+++ b/kustomization/components/longhorn/kustomization.yml
@@ -2,6 +2,13 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
+patches:
+  - path: patches/set_priorityClassName-system-cluster-critical.yml
+    target:
+      kind: Deployment
+  - path: patches/set_priorityClassName-system-node-critical.yml
+    target:
+      kind: DaemonSet
 resources:
     # renovate: datasource=github-releases
   - https://raw.githubusercontent.com/longhorn/longhorn/v1.5.3/deploy/longhorn.yaml
