--- a/kustomization/components/traefik/deployment.yml
+++ b/kustomization/components/traefik/deployment.yml
@@ -74,6 +74,7 @@ spec:
             - mountPath: /shared-logs
               name: shared-logs
               readOnly: true
+      priorityClassName: system-cluster-critical
       volumes:
         - emptyDir: {}
           name: shared-logs
