group vector updates

--- a/renovate.json
+++ b/renovate.json
@@ -24,6 +24,12 @@
         "kustomization/components/multus/kustomization.yml"
       ],
       "minimumReleaseAge": "1 month"
+    },
+    {
+      "groupName": "vector",
+      "matchPackagePatterns": [
+        "vector"
+      ]
     }
   ],
   "customManagers": [
