--- a/kustomization/components/frigate/kustomization.yml
+++ b/kustomization/components/frigate/kustomization.yml
@@ -3,8 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 images:
-  - digest: sha256:2906991ccad85035b176941f9dedfd35088ff710c39d45ef1baa9a49f2b16734
-    name: ghcr.io/blakeblackshear/frigate:stable
+  - name: ghcr.io/blakeblackshear/frigate:stable
+    newTag: 0.13.2
 resources:
   - statefulset.yml
   - service.yml
