--- a/kustomization/components/kube-vip/daemonset.yml
+++ b/kustomization/components/kube-vip/daemonset.yml
@@ -27,18 +27,65 @@ spec:
           value: "true"
         - name: cp_namespace
           value: kube-vip
-        - name: port
+        - name: lb_port
           value: "6443"
+        - name: vip_arp
+          value: "true"
+        - name: vip_leaderelection
+          value: "true"
+        - name: vip_leaseduration
+          value: "5"
+        - name: vip_renewdeadline
+          value: "3"
+        - name: vip_retryperiod
+          value: "1"
+        image: ghcr.io/kube-vip/kube-vip
+        name: kube-vip
+        securityContext:
+          capabilities:
+            add:
+            - NET_ADMIN
+            - NET_RAW
+            - SYS_TIME
+      hostNetwork: true
+      priorityClassName: system-cluster-critical
+      serviceAccountName: kube-vip
+      tolerations:
+      - effect: NoSchedule
+        operator: Exists
+      - effect: NoExecute
+        operator: Exists
+
+---
+apiVersion: apps/v1
+kind: DaemonSet
+metadata:
+  name: kube-vip-svc-ds
+spec:
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: kube-vip-svc-ds
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: kube-vip-svc-ds
+    spec:
+      containers:
+      - args:
+        - manager
+        env:
+        - name: cp_enable
+          value: "false"
+        - name: cp_namespace
+          value: kube-vip
+        - name: prometheus_server
+          value: ":2113"
         - name: svc_election
           value: "true"
         - name: svc_enable
           value: "true"
         - name: vip_arp
           value: "true"
-        - name: vip_ddns
-          value: "false"
-        - name: vip_cidr
-          value: "32"
         - name: vip_leaderelection
           value: "true"
         - name: vip_leaseduration
