add a snapshot cleanup job for things that no longer have snapshots

--- a/kustomization/components/longhorn/recurringjob.yml
+++ b/kustomization/components/longhorn/recurringjob.yml
@@ -32,6 +32,18 @@ spec:
 apiVersion: longhorn.io/v1beta1
 kind: RecurringJob
 metadata:
+  name: snapshot-cleanup
+  namespace: longhorn-system
+spec:
+  concurrency: 2
+  cron: "5 */1 * * *"
+  groups:
+    - no-backup
+  task: snapshot-cleanup
+---
+apiVersion: longhorn.io/v1beta1
+kind: RecurringJob
+metadata:
   name: snapshot-daily
   namespace: longhorn-system
 spec:
