--- a/kustomization/components/hogs-bind9-config/configmap/etc_named.conf
+++ b/kustomization/components/hogs-bind9-config/configmap/etc_named.conf
@@ -90,3 +90,10 @@ zone "0.117.10.in-addr.arpa" IN {
   notify yes;
   allow-update { none; };
 };
+
+zone "42.31.172.in-addr.arpa" IN {
+  type master;
+  file "/var/cache/bind/42.31.172.in-addr.arpa";
+  notify yes;
+  allow-update { none; };
+};
