--- a/host_vars/tartarus01.tswn.us.yml
+++ b/host_vars/tartarus01.tswn.us.yml
@@ -160,6 +160,11 @@ vyos_interfaces__wireguard:
           ipv4:
             - network: "{{ hostvars['hogsflixplus01.tswn.us'].wireguard__address | ansible.utils.ipaddr('address') }}/32"
         pubkey: "{{ hostvars['hogsflixplus01.tswn.us'].wireguard__pubkey }}"
+      - name: hogsflixplus02.tswn.us
+        allowed_ips:
+          ipv4:
+            - network: "{{ hostvars['hogsflixplus02.tswn.us'].wireguard__address | ansible.utils.ipaddr('address') }}/32"
+        pubkey: "{{ hostvars['hogsflixplus02.tswn.us'].wireguard__pubkey }}"
     port: 51823
 
 vyos_ospf_interfaces__config:
