--- a/kustomization/overlays/prod/transmission/patches/add_protonvpn.yml
+++ b/kustomization/overlays/prod/transmission/patches/add_protonvpn.yml
@@ -6,6 +6,32 @@ metadata:
 spec:
   template:
     spec:
+      containers:
+        - name: dnsmasq
+          image: dockurr/dnsmasq
+          livenessProbe:
+            tcpSocket:
+              port: 53
+          readinessProbe:
+            tcpSocket:
+              port: 53
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              add:
+                - NET_ADMIN
+                - NET_RAW
+              drop:
+                - ALL
+            runAsGroup: 0
+            runAsNonRoot: false
+            runAsUser: 0
+            seccompProfile:
+              type: RuntimeDefault
+          volumeMounts:
+            - mountPath: /etc/dnsmasq.conf
+              name: dnsmasq
+              subPath: dnsmasq.conf
       initContainers:
         - command:
             - /bin/sh
@@ -31,6 +57,9 @@ spec:
             - mountPath: /scripts
               name: wireguard-scripts
       volumes:
+        - name: dnsmasq
+          configMap:
+            name: dnsmasq-configmap
         - name: wireguard-scripts
           configMap:
             defaultMode: 0777
