have pod use local dns

--- a/kustomization/overlays/prod/transmission/patches/add_protonvpn.yml
+++ b/kustomization/overlays/prod/transmission/patches/add_protonvpn.yml
@@ -7,6 +7,11 @@ spec:
   template:
     spec:
       containers:
+        - name: transmission
+          volumeMounts:
+            - mountPath: /etc/resolv.conf
+              name: dnsmasq
+              subPath: resolv.conf
         - name: dnsmasq
           image: dockurr/dnsmasq
           livenessProbe:
