--- a/kustomization/overlays/prod/transmission/kustomization.yml
+++ b/kustomization/overlays/prod/transmission/kustomization.yml
@@ -7,7 +7,8 @@ components:
 configMapGenerator:
   - name: dnsmasq-configmap
     files:
-      - configmap/dnsmasq.conf
+      - configmap/dnsmasq/dnsmasq.conf
+      - configmap/dnsmasq/resolv.conf
   - name: wireguard-scripts-configmap
     files:
       - configmap/scripts/setup_wireguard.sh
