install mod to open port for protonvpn

--- a/kustomization/overlays/prod/transmission/patches/add_protonvpn.yml
+++ b/kustomization/overlays/prod/transmission/patches/add_protonvpn.yml
@@ -7,7 +7,10 @@ spec:
   template:
     spec:
       containers:
-        - name: transmission
+        - env:
+            - name: DOCKER_MODS
+              value: ghcr.io/sdwilsh/transmission-protonvpn:main
+          name: transmission
           volumeMounts:
             - mountPath: /etc/resolv.conf
               name: dnsmasq
