--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -55,6 +55,9 @@ access_control:
 # https://www.authelia.com/configuration/session/introduction/
 session:
   domain: tswn.us
+  cookies:
+    - domain: tswn.us
+      authelia_url: https://auth.tswn.us
   redis:
     high_availability:
       sentinel_name: myMaster
