update config to remove warnings about old config settings

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -73,8 +73,8 @@ session:
 # https://www.authelia.com/configuration/storage/introduction/
 storage: 
   postgres:
+    address: tcp://authelia-storage-pg.traefik.svc.cluster.local:5432
     database: authelia
-    host: authelia-storage-pg.traefik.svc.cluster.local
     tls:
       skip_verify: true
 
