manage transmission with argo

--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -23,6 +23,7 @@ resources:
   - application/prometheus.yml
   - application/redis.yml
   - application/traefik.yml
+  - application/transmission.yml
   - application/unifi.yml
   - application/valheim-forerunner.yml
   - application/valheim-relic.yml
