--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -21,6 +21,7 @@ resources:
   - application/paperless.yml
   - application/postgresql.yml
   - application/prometheus.yml
+  - application/proton-mail.yml
   - application/redis.yml
   - application/traefik.yml
   - application/transmission.yml
