--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -186,6 +186,8 @@ bind_zones:
         ip: 10.11.0.104
       - name: worker02.hogs
         ip: 10.11.0.105
+      - name: worker03.hogs
+        ip: 10.11.0.106
       - name: paperless-samba.hogs
         ip: 10.11.1.32
       - name: traefik.hogs
