--- a/kustomization/overlays/prod/unifi/ingress.yml
+++ b/kustomization/overlays/prod/unifi/ingress.yml
@@ -2,10 +2,15 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
+    traefik.ingress.kubernetes.io/router.tls: "true"
   name: unifi-network-application-ingress
 spec:
   rules:
-    - http:
+    - host: unifi.tswn.us
+      http:
         paths:
           - backend:
               service:
