--- a/kustomization/components/longhorn/storageclass.yml
+++ b/kustomization/components/longhorn/storageclass.yml
@@ -18,3 +18,23 @@ parameters:
   staleReplicaTimeout: "2880" # 48 hours in minutes
 provisioner: driver.longhorn.io
 reclaimPolicy: Retain
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: longhorn-encrypted-no-replica
+allowVolumeExpansion: true
+parameters:
+  csi.storage.k8s.io/node-publish-secret-name: longhorn
+  csi.storage.k8s.io/node-publish-secret-namespace: longhorn-system
+  csi.storage.k8s.io/node-stage-secret-name: longhorn
+  csi.storage.k8s.io/node-stage-secret-namespace: longhorn-system
+  csi.storage.k8s.io/provisioner-secret-name: longhorn
+  csi.storage.k8s.io/provisioner-secret-namespace: longhorn-system
+  dataLocality: best-effort
+  encrypted: "true"
+  fromBackup: ""
+  numberOfReplicas: "1"
+  staleReplicaTimeout: "2880" # 48 hours in minutes
+provisioner: driver.longhorn.io
+reclaimPolicy: Retain
