--- a/plays/kairos/upgrade.yml
+++ b/plays/kairos/upgrade.yml
@@ -77,28 +77,15 @@
     - 2 # The remaining nodes in chunks of two.
   strategy: free
   tasks:
-    # TODO(sdwilsh): This does not work today because we need to be able to select specific pods.  See
-    #                https://github.com/ansible-collections/kubernetes.core/issues/474
-    # - name: Drain
-    #   kubernetes.core.k8s_drain:
-    #     delete_options:
-    #       delete_emptydir_data: yes
-    #       force: yes
-    #       ignore_daemonsets: yes
-    #     name: "{{ inventory_hostname_short }}"
-    #     state: drain
-    #   delegate_to: localhost
     - name: Drain
-      ansible.builtin.shell:
-        cmd: "kubectl drain {{ inventory_hostname_short }} --ignore-daemonsets --delete-emptydir-data --force --pod-selector='{{ pod_selectors | join(',') }}' --kubeconfig ~/.kube/config"
+      kubernetes.core.k8s_drain:
+        delete_options:
+          delete_emptydir_data: yes
+          force: yes
+          ignore_daemonsets: yes
+        name: "{{ inventory_hostname_short }}"
+        state: drain
       delegate_to: localhost
-      vars:
-        pod_selectors:
-          - app!=csi-attacher
-          - app!=csi-provisioner
-          - longhorn.io/instance-manager-type!=aio
-          - longhorn.io/instance-manager-type!=engine
-          - longhorn.io/instance-manager-type!=replica
     - name: Reboot
       ansible.builtin.reboot:
         pre_reboot_delay: 60 # seconds
